--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # 网络数据请求
+  dio: ^4.0.0
+  http: ^0.13.3
+  # 全局状态管理
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
