--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^0.13.3
   # 全局状态管理
   provider: ^5.0.0
+  # BottomBar中间的按钮
+  flutter_speed_dial: ^3.0.5
 
 dev_dependencies:
   flutter_test:
