--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_speed_dial: ^3.0.5
   #轮播图
   flutter_card_swipper: ^0.4.0
+  #加载动画
+  loading_indicator: ^2.1.1
 
 dev_dependencies:
   flutter_test:
